tests/programs/taint/a4-test-cases/pass/taint_flow_sensitive_pass1.rice
// 1

#[secure]
fn secure() -> int {
  0 
}

fn main() {
  let t = 1 in
  println(int_to_string(t));
  t := secure()  
}