tests/programs/taint/a4-test-cases/fail/taint_capture_fail.rice
#[secure] fn secure() -> int { 0 }

fn main() {
  let x = secure() in
  let f = \() -> _. x in
  println(int_to_string(f()))
}